@@ -158,16 +158,12 @@ ViaVbeSetMode(ScrnInfoPtr pScrn, DisplayModePtr pMode)
 
     pScrn->vtSema = TRUE;
 
-    /*
-     * FIXME: Take DRI lock and wait for engine idle here.
-     */
-
-    if (!pVia->NoAccel)
-	viaInitialize2DEngine(pScrn);
-    
+    if (!pVia->NoAccel) {
 #ifdef XF86DRI || defined(VIA_HAVE_EXA)
-    VIAInitialize3DEngine(pScrn);
+	VIAInitialize3DEngine(pScrn);
 #endif 
+	viaInitialize2DEngine(pScrn);
+    }
 
     ViaVbeAdjustFrame(pScrn->scrnIndex, pScrn->frameX0, pScrn->frameY0, 0);
 
